# nodespecs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cpu-benchmark.py  cpuinfo.py  hardware.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  python-publish.yml
src/nodespecs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/specs/: __init__.py  __main__.py  benchmark.py  cli.py  cmd.py  config.toml  cpuinfo.py  hardware.py  pyinfo.py
src/specs/communicate/: __init__.py  aboutme.py  tcpsocket.py
src/specs/communicate/tcpip/: client.py  protocol.py  server.py
src/specs/communicate/upload/: __init__.py
src/specs/disk/: __init__.py  automate.py  drive.py  indexer.py  organizer.py
src/specs/format/: html2pdf.py
src/specs/git/: README_git_mermaid_generator.md  collector.py  git_mermaid_generator.py  renderer.py
src/specs/hardware/: __init__.py  deps.py  main.py
tests/: test_compact_summary.py  test_deps.py  test_indexer.py
