[build-system]
requires = [ "setuptools>=61.0.0", "wheel", "toml",]
build-backend = "setuptools.build_meta"

[project]
name = "nodespecs"
version = "0.4.0"
description = "A Swiss Army Knife library for system, hardware, and filesystem utilities on Python 3.6+"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: System Administrators", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: System :: Hardware", "Topic :: System :: Systems Administration", "Topic :: Utilities",]
keywords = [ "cpu", "gpu", "benchmark", "psutil", "system", "hardware", "filesystem", "upload", "mermaid", "gitgraph",]
dependencies = [ "tabulate >= 0.8.0",]
requires-python = ">=3.6"
[[project.authors]]
name = "jinsanity"
email = "jinsanityff@gmail.com"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [ "GPUtil", "pip-tools", "psutil >= 5.9.5", "toml",]
test = [ "GPUtil ; python_version >= '3.10'",]

[project.urls]
Homepage = "https://github.com/jinsanity07git/nodespecs"
Repository = "https://github.com/jinsanity07git/nodespecs"
Issues = "https://github.com/jinsanity07git/nodespecs/issues"
Changelog = "https://github.com/jinsanity07git/nodespecs/blob/main/CHANGELOG.md"
Source = "https://github.com/jinsanity07git/nodespecs"

[project.scripts]
realpython = "specs.__main__:main"
